--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -20,8 +20,13 @@
 
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/contentRecycleView"
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/contentRecycleView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/readView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
