--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="green">#008000</color>
+    <color name="white">#ffffff</color>
+    <color name="gray">#808080</color>
+    <color name="red">#ff0000</color>
+
 </resources>
