--- a/app/src/main/res/layout/activity_manga.xml
+++ b/app/src/main/res/layout/activity_manga.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".MangaActivity">
+    tools:context=".activity.MangaActivity">
 
 
     <com.google.android.material.appbar.AppBarLayout
@@ -65,27 +65,17 @@
 <!--                android:layout_margin="20dp"-->
 <!--                app:cardCornerRadius="5dp">-->
 
-<!--                <com.android.mangahouse.NewListView-->
-<!--                    android:id="@+id/catalogView"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>-->
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/chapterRecycleView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
-
-
-
-<!--            </com.google.android.material.card.MaterialCardView>-->
-
-            <!--        </LinearLayout>-->
 
         </androidx.core.widget.NestedScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/subFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
