--- a/app/src/main/res/layout/manga_item.xml
+++ b/app/src/main/res/layout/manga_item.xml
@@ -24,7 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:textColor="#000"/>
+            android:textColor="#000"
+            android:singleLine="true"/>
 
     </LinearLayout>
 
