--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="green">#008000</color>
     <color name="white">#ffffff</color>
-    <color name="gray">#808080</color>
+    <color name="gray">#3C808080</color>
     <color name="red">#ff0000</color>
 
 </resources>
