--- a/app/src/main/res/layout/activity_manga.xml
+++ b/app/src/main/res/layout/activity_manga.xml
@@ -41,7 +41,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/detail_swipeRefresh"
         android:layout_width="match_parent"
@@ -49,29 +48,35 @@
         android:paddingTop="20dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:layout_marginBottom="50dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-            <!--        <LinearLayout-->
-            <!--            android:orientation="vertical"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content">-->
-
-<!--            <com.google.android.material.card.MaterialCardView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_margin="20dp"-->
-<!--                app:cardCornerRadius="5dp">-->
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/chapterRecycleView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/chapterRecycleView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </androidx.core.widget.NestedScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <LinearLayout
+        android:id="@+id/continueRead"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom"
+        android:background="@color/blue">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="继续阅读"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:gravity="center" />
+    </LinearLayout>
+
+
+
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -79,7 +84,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:src="@drawable/detail_subscribe"
         app:layout_anchor="@id/appBarLayout"
         app:layout_anchorGravity="bottom|end" />
 
