--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="white">#ffffff</color>
     <color name="gray">#3C808080</color>
     <color name="red">#ff0000</color>
+    <color name="blue">#2196F3</color>
 
 </resources>
