--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,9 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:menu="@menu/nav_menu"
-        app:headerLayout="@layout/nav_header" />
+        app:headerLayout="@layout/nav_header"
+        app:itemTextColor="@drawable/nav_select"
+        app:itemIconTint="@drawable/nav_select"/>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
