分类推荐板块

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,11 +2,11 @@
     <item
         android:id="@+id/subscribe"
         android:icon="@drawable/bottom_nav_subscribe"
-        android:title="Subscribe" />
+        android:title="" />
     <item
         android:id="@+id/recommend"
         android:icon="@drawable/bottom_nav_recommend"
-        android:title="Recommend" />
+        android:title="" />
 <!--    <item-->
 <!--        android:id="@+id/local"-->
 <!--        android:icon="@drawable/bottom_nav_local"-->
