--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavView"
+            style="@style/MyBottomNavigationView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:itemBackground="@android:color/white"
