--- a/app/src/main/res/layout/manga_item.xml
+++ b/app/src/main/res/layout/manga_item.xml
@@ -13,11 +13,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <ImageView
-            android:id="@+id/mangaImage"
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:scaleType="centerCrop" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/mangaImage"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:scaleType="centerCrop" />
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="#000"
+                app:cardCornerRadius="5dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true">
+                <TextView
+                    android:id="@+id/mangaSite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="2dp"
+                    android:text=""
+                    android:textColor="#fff" />
+            </com.google.android.material.card.MaterialCardView>
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/mangaName"
