--- a/app/src/main/res/layout/tag_item.xml
+++ b/app/src/main/res/layout/tag_item.xml
@@ -21,6 +21,7 @@
             android:layout_marginBottom="5dp"
             android:textColor="#FF0000"
             android:textSize="18sp"
+            android:textStyle="bold"
             android:typeface="serif" />
 
         <androidx.recyclerview.widget.RecyclerView
