--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/gray"
     tools:context=".activity.SearchActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -31,7 +32,6 @@
                 android:layout_height="wrap_content"
                 android:iconifiedByDefault="false"
                 android:queryHint="请输入搜索内容" />
-
 
             <Button
                 android:id="@+id/source_site_button"
