--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -10,4 +10,14 @@
         android:layout_height="80dp"
         android:layout_centerInParent="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_alignParentBottom="true"
+        android:text="Kurisu"
+        android:textColor="#FFF"
+        android:textSize="18sp" />
+
 </RelativeLayout>
